# fbapi-reqwest-rs

./: Cargo.toml
src/: apis.rs  batch_request.rs  error.rs  lib.rs
src/apis/: check_ig_media.rs  create_album.rs  delete_object.rs  get_object.rs  post_album_photo.rs  post_batch.rs  post_feed_array.rs  post_ig_carousel.rs  post_ig_media_publish.rs  post_ig_picture.rs  post_ig_picture_stories.rs  post_ig_reel.rs  post_ig_video.rs  post_ig_video_stories.rs  post_object.rs  post_picture.rs  post_video.rs  post_video_reel.rs  post_video_thumnail.rs
