[package]
name = "fbapi-reqwest"
version = "0.1.0"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "~1.8.0"
reqwest = { version = "~0.11.4", features = ["json", "stream", "multipart"] }
rust-crypto = "~0.2.36"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
rusoto_core = "~0.47.0"
thiserror = "~1.0.26"
tokio = { version = "~1", features = ["macros", "time"] }
tokio-util = { version = "~0.6.7", features = ["codec"] }